--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@
     display: flex;
     flex-direction: column;
     flex: 0 0 auto;
-    border-bottom: 0px;
-    border-right: 0px;
+    border: none;
 }
 div {
     border: 1px solid green;
