--- a/style.css
+++ b/style.css
@@ -5,15 +5,17 @@
 }
 
 #container {
-    width: 100vh;
-    height: 100vh;
+    width: 90vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     flex: 0 0 auto;
     border: 20px solid black;
-    border-radius: 10px;
+    border-radius: 6px;
     padding: 6px;
     background-color: white;
+    align-self: center;
+    
 }
 div {
     border: 1px solid green;
@@ -31,41 +33,40 @@ div {
 
 body {
     display: flex;
-    gap: 20px;
+    gap: 5px;
     background-color: #fffb00;
+    align-items: center;
+    height: 100vh;
+    justify-content: center;
+    flex-direction: column;
 }
 #btnStart {
     color: white;
-    font-weight: 200;
-    font-size: 50px;
-    background-color: black;
+    font-weight: 900;
+    flex: 1;
+    background-color: blueviolet;
     text-align: center;
-    width: 200px;
-    flex: 0 0 auto;
-    border: none;
-    border-radius: 50%;
-    height: 200px;
-
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+    border: 3px solid white;
 
 }
 
 #btnChangeColor {
     color: white;
-    font-weight: 200;
-    font-size: 50px;
-    background-color: blue;
+    font-weight: 900;
+    border-radius: 10px;
+    padding: 10px;
+    border: 3px solid white;
+    background-color: blueviolet;
     text-align: center;
-    width: 200px;
-    flex: 0 0 auto;
-    border: none;
-    border-radius: 50%;
-    height: 200px;
-
+    font-size: 30px;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -74,18 +75,52 @@ body {
 
 #btnResetColor {
     color: white;
-    font-weight: 200;
-    font-size: 50px;
-    background-color: red;
+    font-weight: 900;
+    font-size: 30px;
+    background-color: blueviolet;
     text-align: center;
-    width: 200px;
-    flex: 0 0 auto;
-    border: none;
-    border-radius: 50%;
-    height: 200px;
-
+    border-radius: 10px;
+    padding: 10px;
+    border: 3px solid white;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+#btnDefaultColor {
+    color: white;
+    font-weight: 900;
+    font-size: 30px;
+    background-color: blueviolet;
+    text-align: center;
+    border-radius: 10px;
+    padding: 10px;
+    border: 3px solid white;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#btnClearGrid {
+    color: white;
+    font-weight: 900;
+    font-size: 30px;
+    background-color: blueviolet;
+    text-align: center;
+    border-radius: 10px;
+    padding: 10px;
+    border: 3px solid white;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.cells {
+    text-align: center;
 }
