--- a/style.css
+++ b/style.css
@@ -122,3 +122,18 @@ body {
 }
 
 
+#btnEraser {
+    color: white;
+    font-weight: 900;
+    font-size: 30px;
+    background-color: blueviolet;
+    text-align: center;
+    border-radius: 10px;
+    padding: 10px;
+    border: 3px solid white;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
