--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -10,15 +9,15 @@
     flex-direction: row-reverse;
     align-items: center;
     justify-content: flex-end;
-    gap: 10px;
-    max-width: 902px;
+    gap: 50px;
+    max-width: 1100px;
     margin: 0 auto;
     flex-wrap: wrap;
 }
 
 #container {
-    width: 70vh;
-    height: 70vh;
+    width: 600px;
+    height: 600px;
     display: flex;
     flex-direction: column;
     flex: 0 0 auto;
@@ -26,15 +25,12 @@
     background-color: #ffffff;
 }
 
-
 div div div {
     flex: 1 0 0;
     height: auto;
     width: auto;
     flex-wrap: wrap;
 }
-
-
 
 #container div {
     display: flex;
@@ -45,26 +41,27 @@ div div div {
 }
 
 #title {
-    font-size: 7rem;
-
+    font-size: 6rem;
     text-align: center;
 }
-
 
 #settings {
     display: flex;
     flex-direction: column;
     gap: 10px;
     align-items: center;
+    width: 200px;
 }
 
 #settings button, input {
-    width: 129px;
-    height: 30px;
+    width: 200px;
+    height: 40px;
+    font-size: large;
 }
 
 #sizeValue {
     font-weight: bold;
+    font-size: large;
     margin-bottom: -10px;
     margin-top: 20px;
 }
@@ -78,6 +75,30 @@ input[type='color'] {
     padding: 2px;
 }
 
+input[type='range'] {
+    background: transparent;
+    cursor: pointer;
+    width: 200px;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+    -webkit-appearance: none;
+    background: #e7eaec;
+    border-radius: 5px;
+    border: 1px solid black;
+    height: 10px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    margin-top: -4px;
+ }
+
+input[type='range']:hover {
+    transform: none;
+}
+
 button:focus {
     background-color: black;
     color: white;
@@ -88,4 +109,13 @@ button {
     border: 1px solid black;
     border-radius: 5px;
     background-color: #ffffff;
+    font-weight: bold;
+}
+
+button:hover, input:hover {
+    transform: scale(1.05);
+}
+
+button, input[type='color'] {
+    transition: transform 0.1s ease-in-out;
 }
