--- a/style.css
+++ b/style.css
@@ -21,8 +21,9 @@
     display: flex;
     flex-direction: column;
     flex: 0 0 auto;
-    border: 1px solid black;
     background-color: #ffffff;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    user-select: none;
 }
 
 div div div {
@@ -76,24 +77,25 @@ input[type='color'] {
 }
 
 input[type='range'] {
-    background: transparent;
-    cursor: pointer;
-    width: 200px;
-}
-
-input[type="range"]::-webkit-slider-runnable-track {
     -webkit-appearance: none;
-    background: #e7eaec;
-    border-radius: 5px;
-    border: 1px solid black;
+    background-color: white;
+  }
+  
+  input[type='range']::-webkit-slider-runnable-track {
     height: 10px;
-}
-
-input[type="range"]::-webkit-slider-thumb {
+    border: 1px solid black;
+    border-radius: 25px;
+    background: white;
+  }
+  
+  input[type='range']::-webkit-slider-thumb {
     -webkit-appearance: none;
-    appearance: none;
-    margin-top: -4px;
- }
+    width: 24px;
+    height: 24px;
+    border-radius: 25px;
+    margin-top: -8px;
+    background: black;
+  }
 
 input[type='range']:hover {
     transform: none;
