--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ div div div {
 input[type='color'] {
     width: 60px;
     height: 60px;
-    border: 1px solid black;
+    border: 1px solid #000000;
     border-radius: 5px;
     background: none;
     padding: 2px;
